# red-alert

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .python-version  CLAUDE.md  README.md  hacs.json  pyproject.toml
apps/red_alert/: red_alert.py
data/: cities.json  city_data.json
docs/: CITIES.md  ENGLISH.md  INSTALL.md
docs/integrations/: CBS.md  HOMEPOD.md  HUE.md  UNIFI-LTE-PRO-SSH.md  UNIFI.md  homeassistant.md  homebridge.md  hue.md  telegram.md  unifi.md
docs/integrations/inputs/: CBS-UNIFI-LTE-PRO-SSH.md  CBS.md  HFC.md
docs/integrations/outputs/: HOMEASSISTANT.md  HOMEBRIDGE.md  HOMEPOD.md  HUE.md  TELEGRAM.md  UNIFI.md
scripts/: check-claude-attribution.sh  discover_cloud_devices.py  setup-cbs.py  setup-lte-pro-ssh.py
src/red_alert/: __main__.py
src/red_alert/core/: __init__.py  alert_processor.py  api_client.py  city_data.py  constants.py  history.py  i18n.py  orchestrator.py  polygon_data.py  state.py  utils.py
src/red_alert/integrations/cbs/: __main__.py  server.py
src/red_alert/integrations/homeassistant/: app.py  file_manager.py  geojson.py
src/red_alert/integrations/homebridge/: __main__.py  server.py
src/red_alert/integrations/homepod/: __main__.py  audio_controller.py  server.py
src/red_alert/integrations/hue/: __main__.py  light_controller.py  server.py
src/red_alert/integrations/inputs/cbs/: __main__.py  bridge.py  history.py  input.py  lte_ssh.py  parser.py  server.py
src/red_alert/integrations/inputs/hfc/: api_client.py  input.py
src/red_alert/integrations/outputs/homeassistant/: app.py
src/red_alert/integrations/outputs/homebridge/: __main__.py  output.py  server.py
src/red_alert/integrations/outputs/homepod/: __main__.py  audio_controller.py  output.py  server.py
src/red_alert/integrations/outputs/hue/: __main__.py  light_controller.py  output.py  server.py
src/red_alert/integrations/outputs/telegram/: __main__.py  output.py  server.py
src/red_alert/integrations/outputs/unifi/: __main__.py  led_controller.py  output.py  server.py
src/red_alert/integrations/sources/cbs/: __main__.py  server.py
src/red_alert/integrations/telegram/: __main__.py  bot.py  server.py
src/red_alert/integrations/unifi/: __main__.py  led_controller.py  server.py
src/red_alert/locale/en/LC_MESSAGES/: messages.po
src/red_alert/locale/he/LC_MESSAGES/: messages.mo  messages.po
systemd/: redalert.service
tests/: conftest.py  test_main.py
tests/core/: test_alert_processor.py  test_api_client.py  test_city_data.py  test_constants.py  test_history.py  test_i18n.py  test_orchestrator.py  test_polygon_data.py  test_state.py  test_utils.py
tests/integrations/cbs/: test_parser.py  test_server.py
tests/integrations/homeassistant/: test_file_manager.py  test_geojson.py
tests/integrations/homebridge/: test_server.py
tests/integrations/homepod/: test_audio_controller.py  test_server.py
tests/integrations/hue/: test_light_controller.py
tests/integrations/inputs/cbs/: test_bridge.py  test_history.py  test_input.py  test_parser.py  test_server.py
tests/integrations/inputs/hfc/: test_api_client.py  test_input.py
tests/integrations/outputs/homeassistant/: test_file_manager.py  test_geojson.py
tests/integrations/outputs/homebridge/: test_output.py  test_server.py
tests/integrations/outputs/homepod/: test_audio_controller.py  test_output.py  test_server.py
tests/integrations/outputs/hue/: test_light_controller.py  test_output.py  test_server.py
tests/integrations/outputs/telegram/: test_bot.py  test_output.py  test_server.py
tests/integrations/outputs/unifi/: test_led_controller.py  test_output.py  test_server.py
tests/integrations/sources/cbs/: test_parser.py  test_server.py
tests/integrations/telegram/: test_bot.py  test_server.py
tests/integrations/unifi/: test_led_controller.py  test_server.py
