[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "red-alert"
version = "4.0.0"
description = "Israeli Home Front Command (Pikud Ha-Oref) alert monitor"
requires-python = ">=3.14"

dependencies = [
    "httpx",
]

[project.optional-dependencies]
homeassistant = [
    "appdaemon",
]
homebridge = [
    "aiohttp",
]
unifi = [
    "aiounifi",
    "pyotp",
]
homepod = [
    "pyatv",
]

[dependency-groups]
dev = [
    "basedpyright",
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-aiohttp",
    "pytest-asyncio",
    "ruff",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
indent-width = 4
line-length = 150
# ruff does not yet support py314; using py313 as the closest available target
target-version = "py313"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.basedpyright]
pythonVersion = "3.14"
typeCheckingMode = "standard"
exclude = ["src/red_alert/integrations/homeassistant", "src/red_alert/integrations/homepod"]

[tool.uv]
required-version = ">=0.10"
