[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "red-alert"
version = "4.0.0"
description = "Israeli Home Front Command (Pikud Ha-Oref) alert monitor"
requires-python = ">=3.14"

dependencies = [
    "httpx",
]

[project.optional-dependencies]
homeassistant = [
    "appdaemon",
]
homebridge = [
    "aiohttp",
]
unifi = [
    "aiounifi",
    "pyotp",
    # pyunifiapi is a private repo installed locally on the Pi - it can't be
    # listed here. But its cloud extra requires libdatachannel-py for WebRTC
    # SSH (used by CBS bridge to auto-enable SSH on LTE device reboots).
    # The pre-release specifier (>=X.dev0) is needed because stable 2025.1.2
    # lacks aarch64 wheels for Raspberry Pi OS (manylinux_2_36).
    # Remove this once pyunifiapi is published to PyPI and added here directly.
    "libdatachannel-py>=2025.1.2.dev0",
]
homepod = [
    # pyatv is NOT a direct dependency - it's invoked as a subprocess via
    # atvremote under Python 3.13 (uv run --python 3.13 --with pyatv).
    # This is because pyatv depends on pydantic-core which requires PyO3,
    # and PyO3 does not support Python 3.14.
]
cbs = [
    "asyncssh",
]

[dependency-groups]
dev = [
    "basedpyright",
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-aiohttp",
    "pytest-asyncio",
    "ruff",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
indent-width = 4
line-length = 150
# ruff does not yet support py314; using py313 as the closest available target
target-version = "py313"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.basedpyright]
pythonVersion = "3.14"
typeCheckingMode = "standard"
# appdaemon (homeassistant) depends on pydantic-core, which can't build on
# Python 3.14 (PyO3 doesn't support it yet). Exclude it so basedpyright
# doesn't fail on unresolvable imports. Remove once PyO3 adds 3.14 support.
exclude = ["src/red_alert/integrations/outputs/homeassistant"]

[tool.uv]
required-version = ">=0.10"
